--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,22 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  min-height: 100%;  
+  height: 100%;
+  
   font-family: 'Titillium Web', sans-serif;  
 
   background-image: url('/img/background.png');
   background-position: center right;
+}
+
+#root {
+  height: 100%;
+  min-height: 100%;
 }
 
 .container {
