--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,7 @@ body {
   
   font-family: 'Titillium Web', sans-serif;  
 
-  background-image: url('/img/background.png');
+  /* background-image: url('/img/background.png'); */
   background-position: center right;
 }
 
